Removed the delete system metadata method to the SystemMetadataManager class. Replaced a couple of obsoleted methods.